<resources>
    <string name="app_name">Dicee</string>
    <string name="roll_button_text">Roll</string>
    <string name="image_left_dice">image_left_dice</string>
    <string name="image_right_dice">image_right_dice</string>
    <string name="main_image">Logo</string>
    <string name="description_button" translatable="false">Rolls the dices</string>
    <string name="ScoreText">Press the roll button</string>
</resources>
