<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@android:color/holo_orange_dark"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"

        android:layout_height="0dp"

        android:contentDescription="@string/main_image"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/image_leftDice"
        app:layout_constraintEnd_toStartOf="@+id/guideline_rightLogo"
        app:layout_constraintStart_toStartOf="@+id/guideline_leftLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dicee_logo" />

    <ImageView
        android:id="@+id/image_leftDice"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:contentDescription="@string/image_left_dice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/image_rightDice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice2" />

    <ImageView
        android:id="@+id/image_rightDice"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:contentDescription="@string/image_right_dice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/image_leftDice"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@drawable/dice1" />

    <Button
        android:id="@+id/rollButton"

        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="84dp"

        android:background="@drawable/custom_button"
        android:contentDescription="@string/description_button"
        android:text="@string/roll_button_text"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_rightLogo"
        app:layout_constraintStart_toStartOf="@+id/guideline_leftLogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/ScoreText"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/rollButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline_rightLogo"
        app:layout_constraintStart_toStartOf="@+id/guideline_leftLogo"
        app:layout_constraintTop_toBottomOf="@+id/image_leftDice"
        app:layout_constraintVertical_bias="0.781" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_rightLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.88" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_leftLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12" />


</android.support.constraint.ConstraintLayout>
